src/test/deca/syntax/valid/SansObjet/IfThenElse-ElsifElse.deca
// Description:
//    If with else if and else branches and no instructions.
//
// Results:
//    (void)
//
// Historique:
//    cree le 07/01/2022

{
        if (x > 3) {
            print("First") ;
        }
        else if (x < 3) {
            print("Second") ;
        }
        else {
            print("Third") ;
        }
}
