src/test/deca/syntax/invalid/HelloWorld/Block-NoClosingBracket.deca
// Description:
//    Program without closing bracket
//
// Results:
//    Line 13 : syntax error.
//    test_lex : no error.
//
// History:
//    cree le 05/01/2022

{
println("Hello");
